crates/quaffed/tests/snapshots/end_to_end__each_usage_error_exits_3_saying_what_to_do-3.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "--frobnicate"
---
success: false
exit_code: 3
----- stdout -----

----- stderr -----
quaff: unknown option "--frobnicate"; to search for text that starts with a dash, put it after --
