crates/quaffed/tests/snapshots/end_to_end__each_usage_error_exits_3_saying_what_to_do-5.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "--pattern=handle($a)"
---
success: false
exit_code: 3
----- stdout -----

----- stderr -----
quaff: "--pattern" is not built yet; only a textual search - a bare query or -s - is
