crates/quaffed/tests/snapshots/end_to_end__each_usage_error_exits_3_saying_what_to_do-8.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "--file"
---
success: false
exit_code: 3
----- stdout -----

----- stderr -----
quaff: "--file" needs a value: a script file, or - for standard input
