crates/quaffed/tests/snapshots/end_to_end__each_usage_error_exits_3_saying_what_to_do.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - ""
---
success: false
exit_code: 3
----- stdout -----

----- stderr -----
quaff: the query is empty: give the text to search for
