crates/quaffed/tests/snapshots/end_to_end__every_source_runs_in_the_order_given.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"Client\""
    - "-f"
    - scripts/checks.quaff
    - "-s"
    - def
    - "-e"
    - "find \"value\""
    - "-f"
    - "-"
    - src
  stdin: "find \"print\"\n"
---
success: true
exit_code: 0
----- stdout -----
src/lib.py:2:7-2:12: Client
src/lib.py:1:9-1:13: retry
src/app.py:2:19-2:24: # TODO
src/lib.py:1:1-1:6: # TODO
src/app.py:1:1-1:3: def
src/app.py:3:12-3:16: value
src/app.py:2:5-2:9: print

----- stderr -----
