crates/quaffed/tests/snapshots/end_to_end__files_are_searched_in_their_own_encoding.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - TODO
---
success: true
exit_code: 0
----- stdout -----
latin1.txt:1:6-1:9: TODO
utf16.txt:1:6-1:9: TODO
utf8.txt:1:6-1:9: TODO

----- stderr -----
