crates/quaffed/tests/snapshots/end_to_end__finding_nothing_exits_1_and_is_not_an_error.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - FIXME
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
quaff: no matches for "FIXME"
