crates/quaffed/tests/snapshots/end_to_end__from_a_subdirectory_it_searches_the_whole_project.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - TODO
---
success: true
exit_code: 0
----- stdout -----
../app.py:2:23-2:26: TODO
client.py:1:3-1:6: TODO
client.py:3:13-3:16: TODO
client.py:3:18-3:21: TODO

----- stderr -----
